# mithragdir

./: README.md  conftest.py  docker-compose.yml  prek.toml  pyproject.toml
.github/agents/: Caveman.agent.md
cirdan/: .gitignore  README.md  main.py  pyproject.toml
cirdan/cirdan/: config.py  main.py
cirdan/cirdan/data/: qdrant_repository.py
cirdan/cirdan/domain/: models.py
cirdan/cirdan/services/: llm_service.py  prompt_builder.py  retrieval_service.py
cirdan/tests/: setup_logger.py
docs/: CIRDAN_API_IMPLEMENTATION_PLAN.md  IMPLEMENATION_PLAN.md
gndlf-core/: README.md  pyproject.toml
gndlf-core/src/core/: config.py  main.py  setup_logger.py
gndlf-pipeline/: README.md
gndlf-pipeline/src/pipeline/: __init__.py
gndlf-pipeline/src/pipeline/processing/: chunker.py  embedding.py
gndlf-pipeline/src/pipeline/retriever/: tolkien_gateway_client.py
gndlf-pipeline/tests/: conftest.py
gndlf-pipeline/tests/processing/: test_pipeline_integration.py
gndlf-workflow/: pyproject.toml
gndlf-workflow/src/workflow/: llm_client.py  run.py  utils.py
gndlf-workflow/src/workflow/graph/: graph.py  state.py
gndlf-workflow/src/workflow/nodes/: __init__.py  conversational_llm_node.py  generate_answer.py  guardrail_routing_node.py  node.py  refuse_answer_node.py  retrieve_document_node.py
gndlf-workflow/src/workflow/prompts/: conversational_llm.yml  generate_answer.yml  grade_generation.yml  guardrail_routing.yml  route_query.yml
gndlf-workflow/tests/: conftest.py  test_run.py
gndlf-workflow/tests/nodes/: test_final_check_node.py  test_guardrail_routing_node.py  test_refuse_answer_node.py
gwaihir/: .gitignore  README.md  pyproject.toml
gwaihir/gwaihir/: __init__.py  main.py
gwaihir/gwaihir/db/: db.py  models.py
gwaihir/gwaihir/processing/: chunker.py  embedding.py
gwaihir/gwaihir/retriever/: book_client.py  client.py  text_client.py  tolkien_gateway_client.py
gwaihir/plugins/: init_logger.py
gwaihir/scripts/: chunk_documents.py  crawl_tolkien_gateway.py  ingest_books.py  ingest_data.py
gwaihir/tests/: conftest.py  setup_logger.py
gwaihir/tests/gwaihir/db/: test_db.py
gwaihir/tests/gwaihir/processing/: test_chunker.py  test_embedding.py
gwaihir/tests/gwaihir/retriever/: test_book_client.py  test_client.py  test_text_client.py
lembas-a-service/: .env.example  README.md  docker-compose.postgres.yml  docker-compose.qdrant.yml  pyproject.toml
lembas-a-service/cirdan/: README.md  __init__.py  pyproject.toml
lembas-a-service/cirdan/api/: chat.py
lembas-a-service/cirdan/data/: sqlite_repository.py
lembas-a-service/cirdan/services/: __init__.py  langgraph_rag.py
lembas-a-service/cirdan/src/cirdan/api/: health.py
lembas-a-service/cirdan/src/cirdan/data/: __init__.py  qdrant_repository.py
lembas-a-service/cirdan/src/cirdan/domain/: __init__.py  exceptions.py
lembas-a-service/cirdan/src/cirdan/services/: rag_orchestrator.py  retrieval_service.py
lembas-a-service/cirdan/tests/: conftest.py
lembas-a-service/cirdan/tests/cirdan/: test_config.py
lembas-a-service/cirdan/tests/cirdan/api/: test_health.py
lembas-a-service/cirdan/tests/plugins/: init_logger.py
lembas-a-service/gwaihir/: README.md  pyproject.toml
lembas-a-service/gwaihir/src/gwaihir/: __init__.py  main.py
lembas-a-service/gwaihir/src/gwaihir/processing/: chunker.py  embedding.py
lembas-a-service/gwaihir/tests/: conftest.py  setup_logger.py
lembas-a-service/gwaihir/tests/processing/: test_chunker.py  test_embedding.py  test_pipeline_integration.py
lembas-a-service/gwaihir/tests/retriever/: test_client.py  test_text_client.py
lembas-a-service/lembas-core/: README.md  pyproject.toml
lembas-a-service/lembas-core/src/lembas_core/: db.py  models.py  schemas.py  setup_logger.py
lembas-a-service/lembas-core/tests/: test_db.py
lembas-a-service/scripts/: migrate_sqlite_to_postgres.py
lembas-a-service/tests/: conftest.py
mithragdir/: .env.example  Dockerfile.workspace  README.md  conftest.py  docker-compose.postgres.yml  nginx.conf  pyproject.toml  pytest.ini
mithragdir/.agents/skills/caveman/: SKILL.md
mithragdir/.devcontainer/: devcontainer.json
mithragdir/.github/instructions/: caveman.instructions.md
mithragdir/cirdan/: pyproject.toml
mithragdir/core/src/lembas_core/: main.py
mithragdir/docs/: IMPLEMENATION_PLAN.md  IMPLEMENTATION_PLAN.md
mithragdir/gndlf-core/: README.md
mithragdir/gndlf-core/src/core/: db.py  main.py  models.py  schemas.py
mithragdir/gndlf-core/tests/: test_db.py
mithragdir/gndlf-pipeline/: README.md  pyproject.toml
mithragdir/gndlf-pipeline/src/pipeline/: main.py
mithragdir/gndlf-pipeline/src/pipeline/processing/: chunker.py  embedding.py
mithragdir/gndlf-pipeline/src/pipeline/retriever/: text_client.py  tolkien_gateway_client.py
mithragdir/gndlf-pipeline/tests/processing/: test_chunker.py  test_embedding.py  test_pipeline_integration.py
mithragdir/gndlf-pipeline/tests/retriever/: test_client.py  test_text_client.py
mithragdir/gndlf-workflow/: README.md  pyproject.toml
mithragdir/gndlf-workflow/src/workflow/: cli.py  llm_client.py
mithragdir/gndlf-workflow/src/workflow/graph/: graph.py  state.py
mithragdir/gndlf-workflow/src/workflow/nodes/: __init__.py  conversational_llm_node.py  final_check_node.py  generate_query_node.py  guardrail_routing_node.py  node.py  retrieve_document_node.py  route_query_node.py
mithragdir/gndlf-workflow/src/workflow/prompts/: generate_query.yml  guardrail_check.yml  guardrail_routing.yml
mithragdir/gndlf-workflow/tests/: conftest.py  test_llm_client.py  test_run.py
mithragdir/gndlf-workflow/tests/nodes/: test_conversational_llm_node.py  test_generate_answer_node.py  test_generate_query_node.py  test_guardrail_routing_node.py  test_retrieve_document_node.py  test_route_query_node.py
mithragdir/gwaihir/tests/processing/: test_pipeline_integration.py
mithragdir/gwaihir/tests/retriever/: test_text_client.py
mithragdir/scripts/: migrate_sqlite_to_postgres.py
mithragdir/tests/plugins/: init_logger.py
pytest_plugins/: init_logger.py
(+5 files in other folders)
