[project]
name = 'cirdan'
version = '0.1.0'
description = 'Middle-earth RAG orchestration API'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
	'fastapi>=0.115.0',
	'langchain>=1.2.10',
	'loguru>=0.7.3',
	'pydantic>=2.11.9',
	'pydantic-settings>=2.10.1',
	'qdrant-client>=1.15.1',
	'uvicorn>=0.34.0',
]

[project.scripts]
cirdan = 'cirdan.main:main'

[dependency-groups]
dev = [
	'coverage>=7.10.7',
	'debugpy>=1.8.17',
	'pyright>=1.1.408',
	'pytest-asyncio>=1.3.0',
	'pytest-cov>=7.0.0',
	'pytest-env>=1.2.0',
	'pytest>=8.4.2',
	'ruff>=0.15.1',
]

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.pytest.ini_options]
addopts = [
	'-s',
]
testpaths = ['tests']
filterwarnings = ['ignore::DeprecationWarning']
pythonpath = ['.', 'cirdan', 'tests']
asyncio_mode = 'auto'

[tool.pytest_env]
DI_UTILS_USER_AGENT = 'cirdan-api-client'

[tool.coverage.run]
branch = true
source = ['cirdan']

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 149
target-version = 'py313'
src = ['cirdan', 'tests']

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
skip-magic-trailing-comma = false
line-ending = 'auto'

[tool.ruff.lint]
select = [
	'A',
	'ANN',
	'ARG',
	'B',
	'BLE',
	'C',
	'D',
	'E',
	'F',
	'I',
	'INP',
	'PLE',
	'PLW',
	'PT',
	'RET',
	'SIM',
	'T20',
	'W',
	'T',
	'N',
	'Q',
	'UP',
	'FURB',
	'PERF',
	'RUF',
	'SLF',
	'SLOT',
	'ASYNC',
]
ignore = [
	'B008',
	'D100',
	'D101',
	'D102',
	'D103',
	'D104',
	'D105',
	'D106',
	'D107',
	'D200',
	'D205',
	'D212',
	'D400',
	'D401',
	'D403',
	'D413',
	'D415',
	'E712',
	'E731',
	'F704',
	'PERF401',
	'Q001',
	'RET504',
	'RET505',
	'RET506',
	'RUF100',
	'SIM102',
	'SIM105',
	'SIM114',
	'SIM115',
	'SIM117',
	'SIM118',
	'W605',
]

[tool.ruff.lint.per-file-ignores]
'tests/**/*' = ['INP001', 'PLR2004', 'SLF001', 'S101', 'TID252']
'__init__.py' = ['F401']

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.pyright]
include = ['cirdan']
exclude = ['**/.*', '**/node_modules', '**/__pycache__', '.venv']
venv = '.venv'
venvPath = '.'
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
