[tool.uv.workspace]
members = ["gndlf-workflow", "gndlf-pipeline", "gndlf-core"]

[project]
name = "mithragdir"
version = "0.1.0"
description = "Monorepo for Mithragdir"
requires-python = ">=3.13"
dependencies = [
    "gndlf-workflow",
    "gndlf-pipeline",
    "gndlf-core",
]

[tool.uv.sources]
gndlf-workflow = { workspace = true }
gndlf-pipeline = { workspace = true }
gndlf-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
