[tool.uv.workspace]
members = ["gndlf-workflow", "gndlf-pipeline", "gndlf-core"]

[project]
name = "mithragdir"
version = "0.1.0"
description = "Monorepo for Mithragdir"
requires-python = ">=3.13"
dependencies = [
    "gndlf-workflow",
    "gndlf-pipeline",
    "gndlf-core",
    "langgraph>=1.1.6",
]

[tool.uv.sources]
gndlf-workflow = { workspace = true }
gndlf-pipeline = { workspace = true }
gndlf-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pyright>=1.1.408",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 149
target-version = "py313"
src = [
    "gndlf-core/src",
    "gndlf-pipeline/src",
    "gndlf-workflow/src",
    "scripts",
    "tests",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C",
    "D",
    "E",
    "F",
    "FURB",
    "I",
    "INP",
    "N",
    "PERF",
    "PLE",
    "PLW",
    "PT",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "T",
    "T20",
    "UP",
    "W",
]
ignore = [
    "B008",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D403",
    "D413",
    "D415",
    "E712",
    "E731",
    "F704",
    "PERF401",
    "Q001",
    "RET504",
    "RET505",
    "RET506",
    "RUF100",
    "SIM102",
    "SIM105",
    "SIM114",
    "SIM115",
    "SIM117",
    "SIM118",
    "W605",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["INP001", "PLR2004", "SLF001", "S101", "TID252"]
"scripts/**/*" = ["INP001", "PLR2004", "SLF001", "S101", "TID252"]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.pyright]
include = [
    "gndlf-core/src/core",
    "gndlf-pipeline/src/pipeline",
    "gndlf-workflow/src/workflow",
    "scripts",
    "tests",
]
exclude = ["**/.*", "**/node_modules", "**/__pycache__", ".venv"]
venv = ".venv"
venvPath = "."
reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = true
